--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,5 @@
+{% extends "layout.html" %}
+
 {% block content %}
 
 <div class="text-center mb-8">
@@ -19,4 +21,5 @@
 <p class="text-4xl font-bold text-yellow-600 mt-2">See Sales Tab</p>
 </div>
 </div>
+
 {% endblock %}
