--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
                     {% for product in products %}
                     <tr>
                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                            {% if product.image_filename %}
-                                <img src="{{ url_for('static', filename='uploads/' + product.image_filename) }}" alt="{{ product.name }}" class="w-12 h-12 object-cover rounded-md shadow">
+                            {% if product.image_url %}
+                                <img src="{{ product.image_url }}" alt="{{ product.name }}" class="w-12 h-12 object-cover rounded-md shadow">
                             {% else %}
                                 <div class="w-12 h-12 bg-gray-200 rounded-md flex items-center justify-center text-gray-400">
                                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
@@ -71,3 +71,4 @@
 
 </div>
 {% endblock %}
+
